--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -52,6 +52,7 @@
 			<artifactId>inventorypoc-api</artifactId>
 			<version>1.0.0</version>
 			<type>jar</type>
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
